--- a/pages/picchiteam/index.html
+++ b/pages/picchiteam/index.html
@@ -518,14 +518,6 @@ vi prego cortesemente di leggere i post del blog che hanno come tag:«<strong>in
     <h4 class="accordion-header">
 <b>VII° GIORNO</b>  a Tokyo ➽ Kamakura: Itinerario ENODEN</h4>
     <div class="accordion-content">
-      <p>— <b>al Mattino</b></p>
-      <p>— Check-out; Spedire bagaglio a Kyoto</p>
-      <p>🚂 Treno per Kamakura ore 07:05</p>
-      <p>— <b>Hotel Metropolitan</b></p>
-      <p>— <b>Kamakura Enoden fino a Enoshima e ritorno</b></p>
-      <p>— <b>Pranzo</b>: Pesce Arrosto</p>
-      <p>— <b>Cena</b>: Shirasu Kenkyujo o Ara Tama o ...</p>
-      <p>— <b>dopo Cena </b>Kamakura</p>
       <ul class="itinerario-giornata">
       <!-- Mattino -->
       <li class="fascia-oraria">
@@ -533,7 +525,7 @@ vi prego cortesemente di leggere i post del blog che hanno come tag:«<strong>in
         <span class="attivita">—   Colazione in albergo</span>
         <span class="attivita">— <label><input type="checkbox" id="myCheckbox">  Check-out in Hotel</label></span>
         <span class="attivita">— <label><input type="checkbox" id="myCheckbox">  Spedire bagagli a Kyoto</label></span>
-        <span class="attivita spostamento">🚆 per Kamakura <b>partenza</b> le 07:05 arrivo aller ore 07:55</span>
+        <span class="attivita spostamento">🚆 per Kamakura <b>partenza</b> le 07:05 arrivo alle ore 07:55</span>
         <span class="attivita">— <label><input type="checkbox" id="myCheckbox">  Bagaglio negli armadietti</label></span>
         <span class="attivita">— <label><input type="checkbox" id="myCheckbox">  Acquisto PASS ENODEN</label></span>
         <span class="attivita spostamento">🚂 ENODEN Kamakura-Enoshima andata</span>
@@ -586,7 +578,7 @@ vi prego cortesemente di leggere i post del blog che hanno come tag:«<strong>in
       <li class="fascia-oraria">
         <span class="titolo-fascia">Pomeriggio</span>
         <span class="attivita">— Kenchoji</span>
-        <span class="attivita">— 🚖 in taxi si può arrivare fino al Hōkoku-ji e/o al Ichijoekan-sanso</span>
+        <span class="attivita spostamento">— 🚖 in taxi si può arrivare fino al Hōkoku-ji e/o al Ichijoekan-sanso</span>
         <span class="attivita">— 🚶 a piedi fino al centro e ci si gode la serata facendo acquisti</span>
       </li>
       <!-- Sera -->
@@ -595,7 +587,8 @@ vi prego cortesemente di leggere i post del blog che hanno come tag:«<strong>in
         <span><b>⚠️ La sera i negozi ed i locali chiudono molto presto!</b></span>
         <span class="attivita sosta">Cena: ... </span><br>
         <span class="titolo-fascia">Dopo Cena</span>
-        <span class="attivita">Kamakura</span>
+        <span class="attivita">Come vi ho scritto ieri, non c'è molto da fare a Kamakura la sera ... andate alla scoperta della città ma è anche una buona occasione oppure accendete la tv e guardate il canale nazionale NHK sul I° canale e fare un po' di zapping ... domani si parte presto per andare a Kyoto!</span>
+        <span class="attivita">— <label><input type="checkbox" id="myCheckbox">  Spedire bagagli a Kyoto se ci sono</label></span>
       </li>
       </ul>
     </div>
@@ -608,17 +601,39 @@ vi prego cortesemente di leggere i post del blog che hanno come tag:«<strong>in
     <h4 class="accordion-header">
 <b>IX° GIORNO</b>  a Kyoto: Kamakura ➽ Kyoto</h4>
     <div class="accordion-content">
-      <p>— <b>al Mattino</b></p>
-      <p>🚂 Treno per Shinagawa ore 09:02</p>
-      <p>🚅 Shinkansen per Kyoto ore 11:07</p>
-      <p>— <b>Pranzo</b>: Obento</p>
-      <p>— Arrivo a Kyoto ore 13:15</p>
-      <p>— Acquisto yatsuhachi in stazione</p>
-      <p>— <b>Hotel Keihan Kyoto Grande</b></p>
-      <p>— Sanjusangendo</p>
-      <p>— Chishakuin</p>
-      <p>— <b>Cena</b> ... vediamo</p>
-      <p>— <b>dopo Cena </b>un giro per il quartiere?</p>
+      <ul class="itinerario-giornata">
+      <!-- Mattino -->
+      <li class="fascia-oraria">
+        <span class="titolo-fascia">Mattino</span>
+        <span class="attivita">—   Colazione in albergo</span>
+        <span class="attivita">— <label><input type="checkbox" id="myCheckbox">  Check-out in Hotel</label></span>
+        <span class="attivita">— <label><input type="checkbox" id="myCheckbox">  Spedire bagagli a Kyoto</label></span>
+        <span class="attivita spostamento">🚂 Treno per Shinagawa <b>partenza</b> ore 09:02 arrivo alle 10:16</span>
+        <span class="attivita">—   Acquistiamo un obentō</span>
+        <span class="attivita spostamento">🚅 Shinkansen per Kyoto <b>partenza</b> ore 11:07 arrivo alle 13:15</span>
+        <span class="attivita">—   Prima di andare in albergo acquistiamo: <b>yatsuhashi</b> da <b>nikiniki</b>.</span>
+        <span class="attivita">—   🚶 andiamo in albergo che è qui vicino, 2 min a piedi e lasciamo il bagaglio</span>
+        <span class="attivita sosta">Pranzo: se avete ancora fame dopo l'obento in stazione c'è una scelta vastissima.</span>
+      </li>
+      <!-- Pomeriggio -->
+      <li class="fascia-oraria">
+        <span class="titolo-fascia">Pomeriggio</span>
+        <span class="attivita">— </span>
+        <span class="attivita spostamento">🚶  ritorniamo in stazione</span>
+        <span class="attivita spostamento">🚌  per sanjusangendomae</span>
+        <span class="attivita">— Sanjusangen-dō</span>
+        <span class="attivita">—  Chishaku-in</span>
+        <span class="attivita">—  Museo nazionale di Kyoto</span>
+      </li>
+      <!-- Sera -->
+      <li class="fascia-oraria">
+        <span class="titolo-fascia">Sera</span>
+        <span class="attivita sosta">Cena: Dipende se siamo stanchi o meno.</span>
+        <span class="attivita">—  Nell'area dentro e fuori la stazione scegliamo un posto che ci aggrada oppure andiamo in centro in metro. In stazione c'è la «Gourmet Street» ed anche il «Hotel Granvia Kyoto» se ci si vuole trattare bene</span><br>
+        <span class="titolo-fascia">Dopo Cena</span>
+        <span class="attivita">—  Dipende dove siamo</span>
+      </li>
+      </ul>
     </div>
   </div>
 </div>
@@ -629,19 +644,34 @@ vi prego cortesemente di leggere i post del blog che hanno come tag:«<strong>in
     <h4 class="accordion-header">
 <b>X° GIORNO</b>  a Kyoto: Arashiyama, Katsurarikyu</h4>
     <div class="accordion-content">
-      <p>— <b>al Mattino</b></p>
-      <p>🚂 Treno per Arashiyama ore 08:33</p>
-      <p>— Tenryugi</p>
-      <p>— Hogoin</p>
-      <p>— Kogenin</p>
-      <p>— <b>Pranzo</b>: c'è l'imbarazzo della scelta</p>
-      <p>—  Togetsukyō Bridge</p>
-      <p>🚂 Treno per Katsura ore 15:17</p>
-      <p>— 🚖 taxi o 🚌 bus ... a piedi ci si arriva</p>
-      <p>— Katsurarikyu ore 16:20</p>
-      <p>— 🚖 taxi o 🚌 bus x il centro</p>
-      <p>— <b>Cena</b> Yakisoba</p>
-      <p>— <b>dopo Cena </b>Pontocho</p>
+      <ul class="itinerario-giornata">
+      <!-- Mattino -->
+      <li class="fascia-oraria">
+        <span class="titolo-fascia">Mattino</span>
+        <span class="attivita">—   Colazione in albergo</span>
+        <span class="attivita spostamento">🚂 Treno per Arashiyama <b>partenza</b> ore 08:33 </span>
+        <span class="attivita">—   Tenryū-ji</span>
+        <span class="attivita">—   Hōgō-in</span>
+        <span class="attivita">—   Kogen-in</span>
+        <span class="attivita sosta">Pranzo: c'è l'imbarazzo della scelta.</span>
+      </li>
+      <!-- Pomeriggio -->
+      <li class="fascia-oraria">
+        <span class="titolo-fascia">Pomeriggio</span>
+        <span class="attivita">—   arriviamo fino al Togetsukyō Bridge</span>
+        <span class="attivita spostamento">🚂 Treno per Katsura ore 15:17</span>
+        <span class="attivita spostamento">🚖 taxi o 🚌 bus ... a piedi ci si arriva</span>
+        <span class="attivita">—   Katsurarikyū per le ore 16:20</span>
+        <span class="attivita spostamento">— 🚖 taxi o 🚌 bus x il centro</span>
+      </li>
+      <!-- Sera -->
+      <li class="fascia-oraria">
+        <span class="titolo-fascia">Sera</span>
+        <span class="attivita sosta">Cena: Yakisoba in centro</span>
+        <span class="titolo-fascia">Dopo Cena</span>
+        <span class="attivita">— Pontochō</span>
+      </li>
+      </ul>
     </div>
   </div>
 </div>
@@ -652,16 +682,33 @@ vi prego cortesemente di leggere i post del blog che hanno come tag:«<strong>in
     <h4 class="accordion-header">
 <b>XI° GIORNO</b>  a Kyoto: Myoshin-ji + Ryoan-ji + Kinkaku-ji + Daitoku-ji</h4>
     <div class="accordion-content">
-      <p>— <b>al Mattino</b></p>
-      <p>🚂 Treno per Hanazono prima è meglio è</p>
-      <p>— Myoshinji</p>
-      <p>— Ryoanji</p>
-      <p>— <b>Pranzo</b>: yudofu</p>
-      <p>— Kinkakuji</p>
-      <p>— Daitokuji ... se rimane tempo</p>
-      <p>— 🚖 taxi o 🚌 bus x il centro</p>
-      <p>— <b>Cena</b> Kikkoya</p>
-      <p>— <b>dopo Cena </b>Nishiki Market</p>
+      <ul class="itinerario-giornata">
+      <!-- Mattino -->
+      <li class="fascia-oraria">
+        <span class="titolo-fascia">Mattino</span>
+        <span class="attivita">—   Colazione in albergo</span>
+        <span class="attivita spostamento">🚂 Treno per Hanazono ... prima è meglio è</span>
+        <span class="attivita">—   Myōshin-ji</span>
+        <span class="attivita">—   Ryōan-ji</span>
+        <span class="attivita sosta">Pranzo: Yūdōfu al Ryōan-ji</span>
+      </li>
+      <!-- Pomeriggio -->
+      <li class="fascia-oraria">
+        <span class="titolo-fascia">Pomeriggio</span>
+        <span class="attivita spostamento">🚌 in bus mer il Kinkaku-ji</span>
+        <span class="attivita">—   Kinkaku-ji</span>
+        <span class="attivita spostamento">🚌 in bus per il Daitoku-ji</span>
+        <span class="attivita">—   Daitoku-ji ... anche se non rimane molto tempo</span>
+        <span class="attivita spostamento">— 🚖 in taxi o 🚌 bus x il centro</span>
+      </li>
+      <!-- Sera -->
+      <li class="fascia-oraria">
+        <span class="titolo-fascia">Sera</span>
+        <span class="attivita sosta">Cena: Kikkoya</span>
+        <span class="titolo-fascia">Dopo Cena</span>
+        <span class="attivita">— Mishiki Market</span>
+      </li>
+      </ul>
     </div>
   </div>
 </div>
@@ -672,14 +719,37 @@ vi prego cortesemente di leggere i post del blog che hanno come tag:«<strong>in
     <h4 class="accordion-header">
 <b>XII° GIORNO</b>  a Kyoto: Heian-jingu + Ginkaku-ji + ...</h4>
     <div class="accordion-content">
-      <p>— <b>al Mattino</b></p>
-      <p>— 🚖 taxi o 🚌 bus x Heianjingu prima è meglio è</p>
-      <p>— 🚖 taxi o 🚌 bus x Ginkakuji meglio arrivare prima delle 08:30</p>
-      <p>— <b>Pranzo</b>: c'è l'imbarazzo della scelta ... vediamo al momento</p>
-      <p>— 🚖 taxi o a piedi x Eikando</p>
-      <p>— Nanzenji: hōjō-teien; 🔥 nanzen-in; tenjū-an;konchiin-teien</p>
-      <p>— <b>Cena</b> a Gion ... ma devo controllare</p>
-      <p>— <b>dopo Cena </b>Gion</p>
+      <ul class="itinerario-giornata">
+      <!-- Mattino -->
+      <li class="fascia-oraria">
+        <span class="titolo-fascia">
+          Questo è solo un abbozzo, in quest'area ci sono troppe cose da visitare in un giorno perciò dovremo scegliere i posti da visitare.<br> Tutti è impossibile!
+        </span>
+        <span class="titolo-fascia">Mattino</span>
+        <span class="attivita">—   Colazione in albergo</span>
+        <span class="attivita spostamento">🚖 in taxi o 🚌 bus x Heianjingu prima è meglio è</span>
+        <span class="attivita">—   Heian-jingū</span>
+        <span class="attivita spostamento">🚖 in taxi o 🚌 bus x Ginkaku-ji</span>
+        <span class="attivita">—   🔥 Ginkaku-ji</span>
+        <span class="attivita sosta">Pranzo: c'è l'imbarazzo della scelta ... vediamo al momento.</span>
+      </li>
+      <!-- Pomeriggio -->
+      <li class="fascia-oraria">
+        <span class="titolo-fascia">Pomeriggio</span>
+        <span class="attivita spostamento">🚖 in taxi o a 🚶 piedi x Eikando</span>
+        <span class="attivita">—   🔥 Eikan-dō</span>
+        <span class="attivita spostamento">🚶 a piedi per Nanzen-ji</span>
+        <span class="attivita">—   🔥 Nanzen-ji Hōjō-teien; 🔥 Nanzen-in; Tenjū-an; Konchiin-teien</span>
+        <span class="attivita spostamento">— 🚖 in taxi o 🚶 a piedi x Gion</span>
+      </li>
+      <!-- Sera -->
+      <li class="fascia-oraria">
+        <span class="titolo-fascia">Sera</span>
+        <span class="attivita sosta">Cena: ... a Gion</span>
+        <span class="titolo-fascia">Dopo Cena</span>
+        <span class="attivita">— Giriamo per il quartiere</span>
+      </li>
+      </ul>
     </div>
   </div>
 </div>
