--- a/pages/nicolo/index.html
+++ b/pages/nicolo/index.html
@@ -336,11 +336,11 @@ vi prego cortesemente di leggere i post del blog che hanno come tag:«<strong>in
   </div>
 </div>
 
-<p><!-- II° GIORNO [a Osaka e Nara] 15 mag – Osaka: ??? - Nara: Tōdai-ji - notte a Nara --></p>
+<p><!-- II° GIORNO [Nara] 15 mag – Osaka: ??? - Nara: Tōdai-ji - notte a Nara --></p>
 <div class="accordion">
   <div class="accordion-item">
     <h4 class="accordion-header">
-<b>II° GIORNO</b> a Osaka e Nara</h4>
+<b>II° GIORNO</b> a Nara</h4>
     <div class="accordion-content">
 
     <div>Venerdì, 15 maggio 2026</div>
@@ -396,11 +396,11 @@ vi prego cortesemente di leggere i post del blog che hanno come tag:«<strong>in
   </div>
 </div>
 
-<p><!-- III° GIORNO [a Nara - Uji - Kyoto] 16 mag – Nara: ??? - Uji: Byōdō-in - notte a Kyoto --></p>
+<p><!-- III° GIORNO [a Kyoto] 16 mag – Nara: ??? - Uji: Byōdō-in - notte a Kyoto --></p>
 <div class="accordion">
   <div class="accordion-item">
     <h4 class="accordion-header">
-<b>III° GIORNO</b>  a Nara - Kyoto (via Uji)</h4>
+<b>III° GIORNO</b>  a Kyoto (via Uji): Byōdō-in</h4>
     <div class="accordion-content">
 
     <div>Sabato, 16 maggio 2026</div>
@@ -441,7 +441,7 @@ vi prego cortesemente di leggere i post del blog che hanno come tag:«<strong>in
 <div class="accordion">
   <div class="accordion-item">
     <h4 class="accordion-header">
-<b>IV° GIORNO</b>  a Kyoto:  Toei Eigamura + Pokemon Center Kyoto</h4>
+<b>IV° GIORNO</b>  a Kyoto:  Toei Eigamura + Pokemon Center</h4>
     <div class="accordion-content">
       <div>Domenica, 17 maggio 2026</div>
       <ul class="itinerario-giornata">
@@ -519,52 +519,62 @@ vi prego cortesemente di leggere i post del blog che hanno come tag:«<strong>in
 <div class="accordion">
   <div class="accordion-item">
     <h4 class="accordion-header">
-<b>VI° GIORNO</b>  a Kyoto: Arashiyama area se non ci siete già andati</h4>
-    <h4 class="accordion-header">
-<b>VI° GIORNO</b>  a Kyoto: ... le alternative non mancano</h4>
+<b>VI° GIORNO</b>  a Kyoto: 4 tragitti a scelta</h4>
     <div class="accordion-content">
       <div>Martedì, 19 Maggio 2026</div>
-      <p>— Vi piacerebbe una giornata sulla <a href="https://eizandensha.co.jp/en/" target="_blank" rel="noopener noreferrer nofollow" class="extLink">ferrovia Eiden</a> ci sono templi, giardini, ... in mezzo alle montagne.</p>
-      <p>— C'è un tragitto classico che parte dal tempio Myōshin-ji ➽ Ninna-ji ➽ Ryōan-ji ➽ Kinkaku-ji ➽ Daitoku-ji. I posti sarebbero <i>imprescindibili</i> ma per la visita occorrono almeno due giorni e non sono sicuro che i bambini non si annoierebbero a morte. </p>
-      <p>— È primavera ... se non siete andati ad Arashiyama si potrebbe prendere una barca che ridiscende il fiume fino ad Arashiama ... se siete interessati cerco tutti i riferimenti ... ci sono stato molti anni fa e mi era piaciuto molto ma io ci vivo in Giappone e forse voi volete qualcosa di più ... classico!</p>
+      <ul class="itinerario-giornata">
+      <li class="fascia-oraria">
+        <span class="titolo-fascia">
+        </span>
+        <span class="attivita">—   scelta: Vi piacerebbe una giornata sulla <a href="https://eizandensha.co.jp/en/" target="_blank" rel="noopener noreferrer nofollow" class="extLink">ferrovia Eiden</a> ci sono templi, giardini, ... in mezzo alle montagne.</span>
+        <span class="attivita">—   scelta: C'è un tragitto classico che parte dal tempio Myōshin-ji ➽ Ninna-ji ➽ Ryōan-ji ➽ Kinkaku-ji ➽ Daitoku-ji. I posti sarebbero <i>imprescindibili</i> ma per la visita occorrono almeno due giorni e non sono sicuro che i bambini non si annoierebbero a morte. </span>
+        <span class="attivita">—   scelta: Tragitto: castello e palazzo imperiale</span>
+        <span class="attivita">—   scelta: È <b>primavera</b> ... se non siete andati ad Arashiyama si potrebbe prendere una barca che ridiscende il fiume fino ad Arashiama ... se siete interessati cerco tutti i riferimenti ... ci sono stato molti anni fa e mi era piaciuto molto ma io ci vivo in Giappone e forse voi volete qualcosa di più ... classico!</span>
+      </li>
+      </ul>
     </div>
   </div>
 </div>
 
-<p><!-- VII° GIORNO [a Kyoto]  20 mag  Kyoto: Nijō-jo + Palazzo Imperiale --></p>
+<p><!-- VII° GIORNO [a ...]  20 mag   --></p>
 <div class="accordion">
   <div class="accordion-item">
     <h4 class="accordion-header">
-<b>VII° GIORNO</b>  a Kyoto: Nijō-jo + Palazzo Imperiale</h4>
+<b>VII° GIORNO</b>  a Nagoya o Shizuoka</h4>
     <div class="accordion-content">
     <div>Mercoledì, 20 maggio 2026</div>
+    <ul class="itinerario-giornata">
+    <li class="fascia-oraria">
+      <span class="titolo-fascia">
+      </span>
+      <span class="attivita">—   scelta: a Nagoya: <a href="https://www.legoland.jp/en/" target="_blank" rel="noopener noreferrer nofollow" class="extLink">Legoland</a></span>
+      <span class="attivita">—   scelta: a Shizuoka:<br>
+        <a href="https://www.toshogu.or.jp/foreign_language/" target="_blank" rel="noopener noreferrer nofollow" class="extLink">Kunōzan</a><br>
+        <a href="https://mishima-skywalk.jp/" target="_blank" rel="noopener noreferrer nofollow" class="extLink">Mishima Sky Walk</a><br>
+        <a href="https://miho-no-matsubara.jp/" target="_blank" rel="noopener noreferrer nofollow" class="extLink">Pineta di Miho</a><br>
+        <a href="https://www.hagoromo-hotel.co.jp/" target="_blank" rel="noopener noreferrer nofollow" class="extLink">Hagoromo Hotel</a><br>
+      </span>
+    </li>
+    </ul>
     </div>
   </div>
 </div>
 
-<p><!-- VIII° GIORNO [a Nagoya]  21 mag  nagoya: Lagoland -->
-<!-- VIII° GIORNO [a Shizuoka]  21 mag  Shizuoka: Hagoromo --></p>
+<p><!-- VIII° GIORNO [a Kamakura]  21 mag   --></p>
 <div class="accordion">
   <div class="accordion-item">
-    <h4 class="accordion-header"><b>VIII° GIORNO</b></h4>
+    <h4 class="accordion-header">
+<b>VIII° GIORNO </b> a Kamakura</h4>
     <div class="accordion-content">
     <div>Giovedì, 21 maggio 2026</div>
-      <div class="accordion">
-        <div class="accordion-item">
-          <h4 class="accordion-header">
-<b>VIII° GIORNO</b>  a Nagoya: Lagoland</h4>
-          <div class="accordion-content">
-          </div>
-        </div>
-      </div>
-      <div class="accordion">
-        <div class="accordion-item">
-          <h4 class="accordion-header">
-<b>VIII° GIORNO</b>  a Shizuoka: Hagoromo</h4>
-          <div class="accordion-content">
-          </div>
-        </div>
-      </div>
+    <ul class="itinerario-giornata">
+    <li class="fascia-oraria">
+      <span class="titolo-fascia">
+      </span>
+      <span class="attivita">—   In treno locale fino a Kamakura</span>
+      <span class="attivita">—   Kamakura tour classico</span>
+    </li>
+    </ul>
     </div>
   </div>
 </div>
@@ -573,9 +583,17 @@ vi prego cortesemente di leggere i post del blog che hanno come tag:«<strong>in
 <div class="accordion">
   <div class="accordion-item">
     <h4 class="accordion-header">
-<b>IX° GIORNO</b>  a Kamakura: ...</h4>
+<b>IX° GIORNO</b>  a Tokyo: Meiji-jingū</h4>
     <div class="accordion-content">
     <div>Venerdì, 22 Maggio 2026</div>
+    <ul class="itinerario-giornata">
+    <li class="fascia-oraria">
+      <span class="titolo-fascia">
+      </span>
+      <span class="attivita">—   Al mattino: sulla Enoden</span>
+      <span class="attivita">—   Nel pomeriggio: Meiji-jingū</span>
+    </li>
+    </ul>
     </div>
   </div>
 </div>
@@ -584,9 +602,17 @@ vi prego cortesemente di leggere i post del blog che hanno come tag:«<strong>in
 <div class="accordion">
   <div class="accordion-item">
     <h4 class="accordion-header">
-<b>X° GIORNO</b>  a Kamakura: ... Tokyo: ...</h4>
+<b>X° GIORNO</b>  Tokyo: asakusa + cerimonia del té</h4>
     <div class="accordion-content">
     <div>Sabato, 23 maggio 2026</div>
+    <ul class="itinerario-giornata">
+    <li class="fascia-oraria">
+      <span class="titolo-fascia">
+      </span>
+      <span class="attivita">—   Asakusa</span>
+      <span class="attivita">—   Cerimonia del té in kimono</span>
+    </li>
+    </ul>
     </div>
   </div>
 </div>
@@ -595,9 +621,18 @@ vi prego cortesemente di leggere i post del blog che hanno come tag:«<strong>in
 <div class="accordion">
   <div class="accordion-item">
     <h4 class="accordion-header">
-<b>XI° GIORNO</b>  a Tokyo: cerimonia del té???</h4>
+<b>XI° GIORNO</b>  a Tokyo: Tsukuji + Rikughien + Ginza</h4>
     <div class="accordion-content">
     <div>Domenica, 24 maggio 2026</div>
+    <ul class="itinerario-giornata">
+    <li class="fascia-oraria">
+      <span class="titolo-fascia">
+      </span>
+      <span class="attivita">—   Tsukiji</span>
+      <span class="attivita">—   Rikugi-en</span>
+      <span class="attivita">—   Ginza</span>
+    </li>
+    </ul>
     </div>
   </div>
 </div>
@@ -606,9 +641,18 @@ vi prego cortesemente di leggere i post del blog che hanno come tag:«<strong>in
 <div class="accordion">
   <div class="accordion-item">
     <h4 class="accordion-header">
-<b>XII° GIORNO</b>  a Tokyo: ???</h4>
+<b>XII° GIORNO</b>  a Tokyo: Kawagoe o Nikko o Monte Takao o Shinjuku</h4>
     <div class="accordion-content">
     <div>Lunedì, 25 maggio 2026</div>
+    <ul class="itinerario-giornata">
+    <li class="fascia-oraria">
+      <span class="titolo-fascia"></span>
+      <span class="attivita">—   scelta: Kawagoe</span>
+      <span class="attivita">—   scelta: Nikko</span>
+      <span class="attivita">—   scelta: Monte Takao</span>
+      <span class="attivita">—   scelta: Shinjuku</span>
+    </li>
+    </ul>
     </div>
   </div>
 </div>
@@ -617,51 +661,23 @@ vi prego cortesemente di leggere i post del blog che hanno come tag:«<strong>in
 <div class="accordion">
   <div class="accordion-item">
     <h4 class="accordion-header">
-<b>XIII° GIORNO</b>  a Tokyo: ??? + Partenza</h4>
+<b>XIII° GIORNO</b>  a Tokyo o a Narita</h4>
     <div class="accordion-content">
     <div>Martedì, 26 maggio 2026</div>
+      <ul class="itinerario-giornata">
+      <li class="fascia-oraria">
+        <span class="titolo-fascia">
+        </span>
+        <span class="attivita">—   Partenza per l'Italia ma ci sarebbe tempo per una visita:</span>
+        <span class="attivita">—   scelta: Tokyo</span>
+        <span class="attivita">—   scelta: Narita</span>
+      </li>
+      </ul>
     </div>
   </div>
 </div>
 
-<ul class="listaFormattata u-mb2">
-  <li>Data da decidere – trasferimento a <strong>Shizuoka</strong>
-    <ul>
-      <li>Partenza al mattino presto per arrivare il prima possibile a Shizuoka e visitare subito il <strong><a href="https://www.toshogu.or.jp/" target="_blank" rel="noopener noreferrer nofollow" class="extLink">Kunōzan Tōshōgū</a></strong>
-</li>
-      <li>Soggiorno in un <strong>ryokan</strong> (albergo in stile giapponese): <strong><a href="https://www.hagoromo-hotel.co.jp/" target="_blank" rel="noopener noreferrer nofollow" class="extLink">Hotel Hagoromo</a></strong>
-</li>
-      <li>Visita alla spiaggia con vista sul <strong>Monte Fuji</strong>
-</li>
-      <li>Visita serale e mattutina (all’alba) al santuario <strong><a href="https://miho-jinja.jp/" target="_blank" rel="noopener noreferrer nofollow" class="extLink">Miho-jijya</a></strong>
-</li>
-    </ul>
-  </li>
-</ul>
-
-<ul class="listaFormattata u-mb2">
-  <li>Data da decidere – trasferimento a <strong>Kamakura</strong>
-    <ul>
-      <li>Con un treno locale dovreste arrivare, partendo al mattino, verso le 12:00–14:00.</li>
-      <li>Una volta arrivati, lasciate le valigie al <strong><a href="https://kamakura.metropolitan.jp/?utm_source=google&amp;utm_medium=gbp" target="_blank" rel="noopener noreferrer nofollow" class="extLink">Hotel Metropolitan Kamakura</a></strong>.</li>
-      <li>C’è solo l’imbarazzo della scelta su cosa fare o visitare.</li>
-    </ul>
-  </li>
-</ul>
-
-<ul class="listaFormattata u-mb2">
-  <li>Data da decidere - arrivo a tappa <strong>Tokyo</strong>
-</li>
-</ul>
-
-<p class="u-mb1">Direi che abbiamo materiale sufficiente su cui lavorare per progettare il vostro viaggio.
-Vi ricordo che questa è solo un’idea del percorso e delle tappe principali; la scelta dei luoghi da visitare, dei pasti e di altri dettagli la faremo insieme, strada facendo.
-Se però fissiamo alcuni punti di riferimento (tenendo conto che gli alberghi si possono sempre cambiare), posso iniziare con la programmazione.</p>
-
-<p class="u-mb3">Nella mappa allegata trovate tutti i link dei luoghi citati. Alcuni rimandano a siti in giapponese, ma non preoccupatevi: da qualche parte si trova anche la versione inglese.
-(Non ho messo direttamente i siti in inglese perché, di solito, sono versioni ridotte al minimo che non permettono di apprezzare davvero il posto.)</p>
-
-<section class="o-separator u-tac u-mt1 doNotPrint">
+<section class="o-separator u-tac u-mt3 doNotPrint">
   <h3 class="separator-title post-separator">Vai al giorno ...</h3>
 
 
