--- a/pages/fabioscala/index.html
+++ b/pages/fabioscala/index.html
@@ -906,7 +906,7 @@ vi prego cortesemente di leggere i post del blog che hanno come tag:«<strong>in
 
 <!-- DEBUG: Stampa i valori -->
 <!-- Collection path: _pages/picchiteam/itinerari/ -->
-<!-- Page path: _pages/fabio/fabioscala.md -->
+<!-- Page path: _pages/fabioscala/fabioscala.md -->
 
 
 
