--- a/pages/kazuro/index.html
+++ b/pages/kazuro/index.html
@@ -158,13 +158,28 @@
   <a href="/nicolofamily/pages/kazuro/itinerari/kazuro202510/" class="btnLinkBox-bg">
     <div class="btnLinkContentWrapper-bg">
       <div class="btnLinkHeader-bg">
-        <img src="/nicolofamily/assets/images/torii.svg" class="btnLinkIcon-bg" alt="Enjoy Japan! icon">
-        <span class="btnLinkTitle-bg">Enjoy Japan!</span>
+        <img src="/nicolofamily/assets/images/torii.svg" class="btnLinkIcon-bg" alt="2025-10-22 icon">
+        <span class="btnLinkTitle-bg">2025-10-22</span>
       </div>
       <div class="btnLinkTag-bg">Un fine settimana in relax</div>
       <div class="btnLinkDescription-bg">HND ➽ Kumamoto ➽ Osaka ➽ Nara ➽ Tokyo</div>
     </div>
     <div class="btnLinkImageWrapper-bg" style="background-image: url('/nicolofamily/assets/images/posts/galleries/osaka/osaka_castle_01-thumb.jpg')" aria-label="Team: Kazuro - © roTokyo">
+    </div>
+  </a>
+</div>
+
+<div class="o-btnLink-bg">
+  <a href="/nicolofamily/pages/kazuro/itinerari/kazuro202511/" class="btnLinkBox-bg">
+    <div class="btnLinkContentWrapper-bg">
+      <div class="btnLinkHeader-bg">
+        <img src="/nicolofamily/assets/images/torii.svg" class="btnLinkIcon-bg" alt="2025-11-17 icon">
+        <span class="btnLinkTitle-bg">2025-11-17</span>
+      </div>
+      <div class="btnLinkTag-bg">Toccata e fuga a Kamakura</div>
+      <div class="btnLinkDescription-bg">Tokyo ➽ Kamakura ➽ Tokyo</div>
+    </div>
+    <div class="btnLinkImageWrapper-bg" style="background-image: url('/nicolofamily/assets/images/posts/heroes/kamakura_ukiyoe-thumb.jpg')" aria-label="Kamakura Daibutsu">
     </div>
   </a>
 </div>
