--- a/pages/kazuro/itinerari/kazuro202510/index.html
+++ b/pages/kazuro/itinerari/kazuro202510/index.html
@@ -15,7 +15,7 @@
 	<!-- SEO Section -->
 
 <title>Enjoy Japan!&nbsp;|&nbsp;Un fine settimana in relax</title>
-<meta name="description" content="Un po' di lavoro intervallato da un paio di giorni di relax">
+<meta name="description" content="Dopo un'ispezione di lavoro un paio di giorni di relax">
 <meta name="keywords" content="Enjoy Japan, viaggi personalizzati Giappone, itinerari insoliti, turismo su misura, tradizioni giapponesi, cultura Giappone, esperienze uniche Giappone">
 <meta name="author" content="Enjoy Japan! by KazuRo team">
 
@@ -152,8 +152,7 @@
 
     <!-- Contenuto post-->
     <section class="post-content-wrapper u-mt1">
-      
-<div class="u-w100 u-mb2">
+      <div class="u-w100 u-mb2">
   <p class="itinerario">
     Mercoledì 22 ottobre 2025<br>
     Notti 3<br>
@@ -163,18 +162,18 @@
 </div>
 
 <div class="sottotitolo u-w100 u-mb2">
-  Un po' di lavoro intervallato da un paio di giorni di relax  
+  Dopo un'ispezione di lavoro un paio di giorni di relax  
 </div>
 
 <div class="o-btnLink-bg">
   <a href="https://www.google.com/maps/d/u/0/edit?mid=1BoprnvRX-IWz30yHyVpPHUWOb-xD2J8&amp;usp=sharing" class="extLink btnLinkBox-bg" target="_blank" rel="noopener noreferrer nofollow noopener noreferrer nofollow">
     <div class="btnLinkContentWrapper-bg">
       <div class="btnLinkHeader-bg">
-        <img src="/nicolofamily/assets/images/torii.svg" class="btnLinkIcon-bg" alt="Mappa del Tour icon">
-        <span class="btnLinkTitle-bg">Mappa del Tour</span>
+        <img src="/nicolofamily/assets/images/torii.svg" class="btnLinkIcon-bg" alt="Enjoy Japan! icon">
+        <span class="btnLinkTitle-bg">Enjoy Japan!</span>
       </div>
-      <div class="btnLinkTag-bg">Mappa generale</div>
-      <div class="btnLinkDescription-bg">Tutto il vostro itinerario</div>
+      <div class="btnLinkTag-bg">Un fine settimana in relax</div>
+      <div class="btnLinkDescription-bg">Dopo un'ispezione di lavoro un paio di giorni di relax</div>
     </div>
     <div class="btnLinkImageWrapper-bg" style="background-image: url('https://www.google.com/maps/d/u/0/thumbnail?mid=1BoprnvRX-IWz30yHyVpPHUWOb-xD2J8&amp;usp=sharing')" aria-label="Google my Maps">
     </div>
@@ -282,6 +281,11 @@
     </ul>
   </li>
 </ul>
+
+<!-- Btn Indietro-->
+<section class="redBtn u-tac u-mt2 u-mb3">
+  <a class="" href="javascript:history.back()"> Indietro </a>
+</section>
 
     </section> <!-- End post content section -->
 
