--- a/pages/nicolo/index.html
+++ b/pages/nicolo/index.html
@@ -67,6 +67,7 @@
   list-style: none;
   margin: 1.5rem auto;
   padding-left: 0;
+  border-bottom: 1px solid #cbd5e0;
 }
 .listaFormattata li {
   margin: 0.75rem 0;
@@ -74,7 +75,6 @@
   position: relative;
   font-variant: small-caps;
   letter-spacing: 0.5px;
-  border-bottom: 1px solid #cbd5e0;
   width: 98%;
 }
 .listaFormattata li::before {
@@ -306,6 +306,36 @@ vi prego cortesemente di leggere i post del blog che hanno come tag:«<strong>in
     </ul>
   </li>
   <!-- Puoi aggiungere altri elementi accordion qui -->
+    
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="o-btnLink-bg">
+  <a href="/nicolofamily/pages/nicolo/itinerari/giornoI%C2%B0/" class="btnLinkBox-bg">
+    <div class="btnLinkContentWrapper-bg">
+      <div class="btnLinkHeader-bg">
+        <img src="/nicolofamily/assets/images/torii.svg" class="btnLinkIcon-bg" alt="Enjoy Japan! icon">
+        <span class="btnLinkTitle-bg">Enjoy Japan!</span>
+      </div>
+      <div class="btnLinkTag-bg">Il giorno dell'arrivo</div>
+      <div class="btnLinkDescription-bg">arrivo ore 12:40: primo impatto con la cultura giapponese</div>
+    </div>
+    <div class="btnLinkImageWrapper-bg" style="background-image: url('/nicolofamily/assets/images/posts/heroes/nicolo_main_01-thumb.jpg')" aria-label="Il castello di Osaka">
+    </div>
+  </a>
+</div>
 </ul>
 
 <ul class="listaFormattata">
@@ -342,6 +372,37 @@ vi prego cortesemente di leggere i post del blog che hanno come tag:«<strong>in
     </ul>
   </li>
   <!-- Puoi aggiungere altri elementi accordion qui -->
+  
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="o-btnLink-bg">
+  <a href="/nicolofamily/pages/nicolo/itinerari/giornoII%C2%B0/" class="btnLinkBox-bg">
+    <div class="btnLinkContentWrapper-bg">
+      <div class="btnLinkHeader-bg">
+        <img src="/nicolofamily/assets/images/torii.svg" class="btnLinkIcon-bg" alt="Enjoy Japan! icon">
+        <span class="btnLinkTitle-bg">Enjoy Japan!</span>
+      </div>
+      <div class="btnLinkTag-bg">II° Giorno</div>
+      <div class="btnLinkDescription-bg">Visita a ... (<b>Osaka?</b>) trasferimento in treno a <b>Nara</b>
+</div>
+    </div>
+    <div class="btnLinkImageWrapper-bg" style="background-image: url('/nicolofamily/assets/images/posts/heroes/nicolo_main_02-thumb.jpg')" aria-label="Il tempio di Tōdai-ji a Nara">
+    </div>
+  </a>
+</div>
 </ul>
 
 <ul class="listaFormattata">
@@ -377,6 +438,37 @@ vi prego cortesemente di leggere i post del blog che hanno come tag:«<strong>in
     </ul>
   </li>
   <!-- Puoi aggiungere altri elementi accordion qui -->
+  
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="o-btnLink-bg">
+  <a href="/nicolofamily/pages/nicolo/itinerari/giornoIII%C2%B0/" class="btnLinkBox-bg">
+    <div class="btnLinkContentWrapper-bg">
+      <div class="btnLinkHeader-bg">
+        <img src="/nicolofamily/assets/images/torii.svg" class="btnLinkIcon-bg" alt="Enjoy Japan! icon">
+        <span class="btnLinkTitle-bg">Enjoy Japan!</span>
+      </div>
+      <div class="btnLinkTag-bg">III° Giorno</div>
+      <div class="btnLinkDescription-bg">Visita a ... (<b>Nara?</b>) trasferimento in treno a <b>Kyoto</b> via <b>Uji</b>
+</div>
+    </div>
+    <div class="btnLinkImageWrapper-bg" style="background-image: url('/nicolofamily/assets/images/posts/heroes/nicolo_main_03-thumb.jpg')">
+    </div>
+  </a>
+</div>
 </ul>
 
 <ul class="listaFormattata">
